--- a/Webpages/faq.html
+++ b/Webpages/faq.html
@@ -31,6 +31,7 @@
     <div class="main">
         <article class="window">
             <img src="images/logo's/come fly.jpg" alt="come fly">
+            <img src="/Webpages/images/" alt="">
             
 
         </article>
@@ -106,6 +107,10 @@
                 and collaborations with other brands. This expansion allows fans to incorporate Jordan's style and legacy into their everyday wardrobe.</p>
         </details>
 
+    </article>
+
+    <article>
+        <img src="/Webpages/images/logo's/jordan logo in circle.png" alt="">
     </article>
 
     <div>
