--- a/Webpages/index.html
+++ b/Webpages/index.html
@@ -40,7 +40,7 @@
 
         </article>
         <article class="frontpage">
-            <header><H1>PRIMUSXIII</H1></header>
+            <header><h2>PRIMUSXIII</H2></header>
             <p class="introduction">
                 Welcome to the ultimate destination for Jordan brand sneakerheads and basketball enthusiasts alike! Dive into a realm where passion for kicks and 
                 love for the game collide. Here at PRIMUSXIII, we curate an immersive experience, offering a one-stop shop for everything Jordan: from iconic releases 
