--- a/Webpages/thirteen.html
+++ b/Webpages/thirteen.html
@@ -37,7 +37,7 @@
 
         </article>
         <article class="frontpage">
-            <header><H1>PRIMUSXIII</H1></header>
+            <header><h2>PRIMUSXIII</H2></header>
             <p class="introduction">
                 "Step into the legendary world of the Jordan Brand, where innovation meets iconic style. 
                 From the groundbreaking Air Jordan 1 to the sleek and futuristic Air Jordan 13, each silhouette 
