--- a/Webpages/index.html
+++ b/Webpages/index.html
@@ -25,13 +25,13 @@
 
     <div class="banner">
         <H1>PRIMUSXIII</H1>
-        <h2>It's not just a <i><b>brand</b></i>, its a lifestlye.</h2>
+        <h2>It's not just a brand, its a lifestlye.</h2>
         
     </div>
 
     <div class="main">
         <article class="window">
-            <!--<img src="images/signature.jpg" alt="signature" height="150px">-->
+            
             <img src="images/logo's/come fly.jpg" alt="come fly">
 
 
@@ -41,26 +41,27 @@
         </article>
         <article class="frontpage">
             <header><h2>PRIMUSXIII</H2></header>
-            <p class="introduction">
-                Welcome to the ultimate destination for Jordan brand sneakerheads and basketball enthusiasts alike! Dive into a realm where passion for kicks and 
+            <section class="introduction">
+                <p>Welcome to the ultimate destination for Jordan brand sneakerheads and basketball enthusiasts alike! Dive into a realm where passion for kicks and 
                 love for the game collide. Here at PRIMUSXIII, we curate an immersive experience, offering a one-stop shop for everything Jordan: from iconic releases 
                 to exclusive insights, styling inspirations, historical retrospectives, and beyond. 
-                <br>
-                <br>
+                </p>
+                <p>
                 Whether you're a die-hard fan looking to expand your collection or a newcomer eager to dive into the world of Jordan sneakers, 
                 or simply a fan of streetwear culture, our website is your go-to resource. Delve into the 
                 history and evolution of these timeless classics, from the groundbreaking Air Jordan 1 to the iconic Air Jordan 13, and uncover the stories behind 
                 each silhouette.
-                <br>
-                <br>
+                </p>
+                <p>
                 So, whether you're here to learn, explore, or simply indulge in your love for the early Jordan releases and basketball, 
                 welcome to PRIMUSXIII! Your ultimate destination for sneaker culture and hoops obsession. 
-                <br>
-                <br>
+                </p>
+                <p>
                 Embrace the spirit of flight, ignite your passion, and embark on an unforgettable odyssey with us! Welcome to your 
                 new digital home for all things (XIII) Jordan.
+                </p>
 
-            </p>
+            </section>
         </article>
 
          <article class="homepage-bottom">
@@ -73,7 +74,7 @@
 
     </div>
 
-    <div>
+    <div class="footer">
         <footer>
             <p> &copy PRIMUSXIII coorperation. <i>Since 2024 </i></p>            
         </footer>
